--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     <script src="./app.js"></script> 
+
+    <h2>1.6 Assignment: Module 1</h2>
+    <p>My first assignment for the semester.<p>
+
+    <script>
+document.write(25 + 23);
+</script>
+
+
+<button type="button" onclick="document.write(25 + 23)">Submit!</button>
+
 </body>
 </html>
